# Ade

./: .gitignore  Cargo.toml  DETAILED_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  package.json  tsconfig.json
bridge/: Cargo.toml
bridge/programs/ade-mint/: Cargo.toml
bridge/programs/ade-mint/src/: lib.rs
bridge/programs/solana-lock/: Cargo.toml
bridge/programs/solana-lock/src/: lib.rs
bridge/src/: bridge.rs  bridge_coordinator.rs  event_parser.rs  lib.rs  lock_contract.rs  merkle.rs  multisig.rs  proof_verification.rs  relayer.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: account.rs  agent.rs  bridge.rs  genesis.rs  mod.rs  node.rs  rpc.rs  transaction.rs  validator.rs
config/: genesis.devnet.toml  genesis.example.toml
consensus/: Cargo.toml
consensus/src/: block.rs  finality.rs  genesis.rs  lib.rs  proof_of_stake.rs  vote.rs
docs/: ai-agents.md  architecture.md  bridge-improvements.md  bridge.md  consensus.md  node-setup.md  rpc-api.md  rpc-methods.md  transactions.md
native/: Cargo.toml  ade_native.h  build_native.sh
native/src/: crypto.rs  hash.rs  lib.rs
node/: Cargo.toml
node/src/: ai_inference.rs  ai_pytorch.rs  ai_runtime.rs  block_producer.rs  compression.rs  compute_meter.rs  errors.rs  fee_market.rs  indexer.rs  lib.rs  main.rs  mempool.rs  metrics.rs  network.rs  node.rs  peer_discovery.rs  performance.rs  protocol.rs  snapshot.rs  state_transition.rs  storage.rs  storage_cache.rs  transport.rs  utils.rs  validator.rs
python-sdk/: README.md  setup.py
python-sdk/ade_sidechain/: __init__.py  ai_agent.py  bridge.py  client.py  transaction.py
python-sdk/examples/: batch_execution.py  bridge_transfer.py  deploy_ai_agent.py
rpc/: Cargo.toml
rpc/src/: handlers.rs  lib.rs  server.rs  state.rs  types.rs  websocket.rs
src/: account-manager.ts  ai-agent-advanced.ts  ai-agent.ts  bridge-advanced.ts  bridge.ts  client.ts  index.ts  instruction-helpers.ts  instruction.ts  transaction-builder.ts  transaction.ts  wallet.ts  websocket-client.ts
src/api/: index.ts
src/examples/: api-usage.ts  bridge-usage.ts
src/types/: api.ts  index.ts  rpc.ts
tests/: integration_test.rs  load_test.rs
transaction/: Cargo.toml
transaction/src/: account.rs  executor.rs  instruction.rs  lib.rs  rent.rs  transaction.rs  validation.rs
