[workspace]
members = [
    "node",
    "transaction",
    "rpc",
    "consensus",
    "bridge",
    "native",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ade Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bs58 = "0.5"
sha2 = "0.10"
ed25519-dalek = "2.1"
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
rocksdb = "0.22"


