[package]
name = "ade-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

ade-transaction = { path = "../transaction" }
ade-consensus = { path = "../consensus" }


