[package]
name = "ade-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ade-cli"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bs58.workspace = true
ed25519-dalek.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.11", features = ["json"] }
colored = "2.1"
toml = "0.8"
hex = "0.4"

ade-consensus = { path = "../consensus" }






