[package]
name = "ade-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex = "0.4"

ade-transaction = { path = "../transaction" }

[dev-dependencies]
rand = "0.8"
