[package]
name = "ade-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
bs58.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
rocksdb.workspace = true
byteorder.workspace = true
crc32fast.workspace = true
flate2 = "1.0"

ade-transaction = { path = "../transaction" }
ade-consensus = { path = "../consensus" }

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"
