[package]
name = "ade-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
bs58.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
rocksdb.workspace = true
byteorder.workspace = true
crc32fast.workspace = true
flate2 = "1.0"
zstd = "0.13"
lz4-flex = "0.11"
lru = "0.12"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
dirs = "5.0"
chrono = "0.4"
hex = "0.4"

# ONNX Runtime
ort = "2.0.0-rc.2"
ndarray = "0.15"

# PyTorch (via tch-rs)
tch = { version = "0.15", optional = true }

ade-transaction = { path = "../transaction" }
ade-consensus = { path = "../consensus" }

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"

[features]
default = []
pytorch = ["tch"]
