[package]
name = "ade-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
anyhow.workspace = true
bs58.workspace = true

ade-transaction = { path = "../transaction" }
ade-consensus = { path = "../consensus" }

