[package]
name = "ade-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
anyhow.workspace = true
bs58.workspace = true
sha2 = "0.10"
base64 = "0.21"
async-trait = "0.1"

ade-transaction = { path = "../transaction" }
ade-consensus = { path = "../consensus" }

[dev-dependencies]
tokio-test = "0.4"
