[package]
name = "ade-transaction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
bs58.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
solana-sdk.workspace = true
thiserror.workspace = true
anyhow.workspace = true


